update color schema

--- a/web/src/app/components/input/input.component.html
+++ b/web/src/app/components/input/input.component.html
@@ -1,7 +1,7 @@
 <div class="relative">
   <label
     [for]="'textInput'+label"
-    class="px-1 z-50 text-sm whitespace-nowrap flex absolute -top-2.5 left-3 bg-white w-min">
+    class="px-1 z-50 text-sm whitespace-nowrap flex w-min">
     {{ label }}
   </label>
   <input
