--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,6 +1,4 @@
 <div class='overflow-hidden flex-col flex overflow-y-auto'>
-  <div
-    class="bg-gradient-to-r from-cyan-500 to-blue-500 w-screen h-screen absolute -z-10"
-  ></div>
+  <div class="bg-gradient-to-r from-[#076585] to-[#97b2ac] w-screen h-screen absolute -z-10"></div>
   <router-outlet></router-outlet>
 </div>
