--- a/web/src/app/components/checkbox/checkbox.component.html
+++ b/web/src/app/components/checkbox/checkbox.component.html
@@ -7,7 +7,7 @@
   <input
     [id]="'checkbox' + label"
     [name]="'checkbox' + label"
-    class="border border-gray border-solid rounded-lg size-4 disabled:bg-lightgray ml-auto disabled:text-primary checked:accent-orange-500"
+    class="border border-gray border-solid rounded-lg size-4 disabled:bg-lightgray ml-auto disabled:text-primary checked:accent-secondary"
     type="checkbox"
     [formControl]="formControlElement"/>
 </div>
