--- a/web/src/app/plan/plan.component.html
+++ b/web/src/app/plan/plan.component.html
@@ -1,23 +1,23 @@
 <div class="w-screen h-screen flex flex-col">
   <div class="p-10 gap-x-2 gap-y-4 flex flex-row flex-wrap">
     @for (day of days(); track day; let i = $index) {
-      <div
-        class="py-1 px-4 bg-white rounded-md gap-y-3 bg-clip-padding backdrop-filter flex flex-col backdrop-blur-md bg-opacity-20 border border-gray-100"
-      >
+    <app-card>
+      <div class="py-1 px-4 gap-y-3 flex flex-col">
         <div class='grid auto-cols-min gap-x-4 grid-rows-1 grid-flow-col items-end'>
-          <p class="border-r border-black h-6 pr-2 w-8 text-orange-500">
+          <p class="border-r border-black h-6 pr-2 w-8 text-black">
             {{ i + 1 }}
           </p>
           @for (participant of configuration().participants; track participant) {
-            <div class='flex flex-col'>
-              <p class='text-sm font-semibold'>{{ participant.trim() }}</p>
-              <div class="w-6 h-6 bg-white mt-1"></div>
-            </div>
+          <div class='flex flex-col'>
+            <p class='text-sm font-semibold text-secondary'>{{ participant.trim() }}</p>
+            <input type='checkbox' class="w-6 h-6 bg-white mt-1" (click)='updateDay(participant,i)'>
+          </div>
           }
         </div>
         <div class="text-sm self-center">{{ addDays(configuration().startDay, i) | date: "dd.MM.YY" }}
         </div>
       </div>
+    </app-card>
     }
   </div>
 </div>
